--- a/Ix.NET/Source/Common.targets
+++ b/Ix.NET/Source/Common.targets
@@ -32,15 +32,6 @@
     <BuildTarget>45</BuildTarget>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug8|AnyCPU' ">
-    <BuildConfig>Debug</BuildConfig>
-    <BuildTarget>8</BuildTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release8|AnyCPU' ">
-    <BuildConfig>Release</BuildConfig>
-    <BuildTarget>8</BuildTarget>
-  </PropertyGroup>
-
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug40|AnyCPU' ">
     <BuildConfig>Debug</BuildConfig>
     <BuildTarget>40</BuildTarget>
@@ -50,6 +41,12 @@
     <BuildTarget>40</BuildTarget>
   </PropertyGroup>
 
+  <!--
+       ***********************
+       * Legacy Platforms *
+       ***********************
+   -->
+   
    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug35|AnyCPU' ">
     <BuildConfig>Debug</BuildConfig>
     <BuildTarget>35</BuildTarget>
@@ -77,26 +74,7 @@
     <BuildTarget>WP7</BuildTarget>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugWP8|AnyCPU' ">
-    <BuildConfig>Debug</BuildConfig>
-    <BuildTarget>WP8</BuildTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseWP8|AnyCPU' ">
-    <BuildConfig>Release</BuildConfig>
-    <BuildTarget>WP8</BuildTarget>
-  </PropertyGroup>
-
-  <!--DM: Commented out until we understand what this configuration was for-->
-  <!--<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugXBLV|AnyCPU' ">
-    <BuildConfig>Debug</BuildConfig>
-    <BuildTarget>XBLV</BuildTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseXBLV|AnyCPU' ">
-    <BuildConfig>Release</BuildConfig>
-    <BuildTarget>XBLV</BuildTarget>
-  </PropertyGroup>-->
   
-
   <!-- Build properties for each platform, independent of debug/release build -->
   
   <PropertyGroup Condition=" '$(BuildTarget)' == 'PL' ">
@@ -105,6 +83,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
     <NoStdLib>true</NoStdLib>
+    <BuildFlavor>DESKTOPCLR45</BuildFlavor>
   </PropertyGroup>
   
   <PropertyGroup Condition=" '$(BuildTarget)' == '45' ">
@@ -114,19 +93,14 @@
     <BuildPlatform>DESKTOPCLR</BuildPlatform>
     <BuildFlavor>DESKTOPCLR45</BuildFlavor>
   </PropertyGroup>
-
-
-  <!--DM: TODO - see if a win8 build target is needed for Ix-->
   
-  <!--<PropertyGroup Condition=" '$(BuildTarget)' == '8' ">
-    <DefineConstants>$(DefineConstants);HAS_AWAIT</DefineConstants>
-    <TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
+  <PropertyGroup Condition=" '$(Configuration)' == 'TestPL' ">
+    <DefineConstants>$(DefineConstants);HAS_AWAIT;HAS_APTCA;PORTABLE</DefineConstants>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <NoStdLib>true</NoStdLib>
-    <BuildPlatform>WINDOWS</BuildPlatform>
-    <BuildFlavor>WINDOWS8</BuildFlavor>
-    <DefaultLanguage>en-US</DefaultLanguage>
-  </PropertyGroup>-->
+    <BuildPlatform>DESKTOPCLR</BuildPlatform>
+    <BuildFlavor>DESKTOPCLR45</BuildFlavor>
+  </PropertyGroup>  
 
 
   <PropertyGroup Condition=" '$(BuildTarget)' == '40' ">
@@ -164,7 +138,7 @@
     <BuildFlavor>SILVERLIGHTM7</BuildFlavor>
   </PropertyGroup>
 
-  <!--DM: TODO - there is no WP8 target, need to see if we need one-->  
+
 
 
   <!--
