Set up nuget package restore for Rx.sln

--- a/Rx/NET/Source/Common.targets
+++ b/Rx/NET/Source/Common.targets
@@ -307,7 +307,7 @@
 
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);$(BuildPlatform);$(BuildFlavor);TRACE</DefineConstants>
-    <OutputPath>bin\$(BuildConfig)$(BuildTarget)</OutputPath>
+    <OutputPath>..\bin\$(BuildConfig)$(BuildTarget)</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
