--- a/Rx/NET/Source/packages/repositories.config
+++ b/Rx/NET/Source/packages/repositories.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\packages.config" />
+  <repository path="..\System.Reactive.Core\packages.config" />
 </repositories>
