--- a/Rx.NET/Samples/Portable/SilverlightApplication/SilverlightApplication.csproj
+++ b/Rx.NET/Samples/Portable/SilverlightApplication/SilverlightApplication.csproj
@@ -62,28 +62,28 @@
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="System.Reactive.Core">
-      <HintPath>..\..\..\..\Layout\Rx\DebugSL4\System.Reactive.Core.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\DebugSL4\System.Reactive.Core.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Debugger">
-      <HintPath>..\..\..\..\Layout\Rx\DebugSL4\System.Reactive.Debugger.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\DebugSL4\System.Reactive.Debugger.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Experimental">
-      <HintPath>..\..\..\..\Layout\Rx\DebugSL4\System.Reactive.Experimental.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\DebugSL4\System.Reactive.Experimental.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\..\..\..\Layout\Rx\DebugSL4\System.Reactive.Interfaces.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\DebugSL4\System.Reactive.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Linq">
-      <HintPath>..\..\..\..\Layout\Rx\DebugSL4\System.Reactive.Linq.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\DebugSL4\System.Reactive.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.PlatformServices">
-      <HintPath>..\..\..\..\Layout\Rx\DebugSL4\System.Reactive.PlatformServices.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\DebugSL4\System.Reactive.PlatformServices.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Providers">
-      <HintPath>..\..\..\..\Layout\Rx\DebugSL4\System.Reactive.Providers.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\DebugSL4\System.Reactive.Providers.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Windows.Threading">
-      <HintPath>..\..\..\..\Layout\Rx\DebugSL4\System.Reactive.Windows.Threading.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\DebugSL4\System.Reactive.Windows.Threading.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
