--- a/Rx/NET/Samples/Portable/Net40ConsoleApplication/Net40ConsoleApplication.csproj
+++ b/Rx/NET/Samples/Portable/Net40ConsoleApplication/Net40ConsoleApplication.csproj
@@ -37,34 +37,34 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive.Core">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Core.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Core.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Debugger">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Debugger.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Debugger.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Experimental">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Experimental.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Experimental.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Interfaces.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Linq">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Linq.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.PlatformServices">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.PlatformServices.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.PlatformServices.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Providers">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Providers.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Providers.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Runtime.Remoting">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Runtime.Remoting.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Runtime.Remoting.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Windows.Forms">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Windows.Forms.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Windows.Forms.dll</HintPath>
     </Reference>
     <Reference Include="System.Reactive.Windows.Threading">
-      <HintPath>..\..\..\..\Layout\Rx\Debug40\System.Reactive.Windows.Threading.dll</HintPath>
+      <HintPath>..\..\..\Source\bin\Debug40\System.Reactive.Windows.Threading.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
