Ignore packages directory

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ pip-log.txt
 Rx.NET/Source/Rx.sln.ide/
 Ix.NET/Source/Interactive Extensions.sln.ide/
 Rx.NET/tools/HomoIcon/HomoIcon.sln.ide/
+Rx.NET/Test/Rx/packages/
