--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ Ix.NET/Source/Interactive Extensions.sln.ide/
 Rx.NET/tools/HomoIcon/HomoIcon.sln.ide/
 Rx.NET/Test/Rx/packages/
 Rx.NET/Samples/Portable/Portable.sln.ide/
+Rx.NET/Samples/Portable/packages/
