Fixed a bug in EventLoopScheduler that may cause SemaphoreFullException to be thrown when under heavy load due to incongruent calls to Sempahore.Release and Semaphore.Wait.

--- a/Rx.NET/Source/Tests.System.Reactive/Tests.System.Reactive.csproj
+++ b/Rx.NET/Source/Tests.System.Reactive/Tests.System.Reactive.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Semaphore.cs" />
     <Compile Include="Stress\Core\Disposables\Composite.cs" />
     <Compile Include="Stress\Core\Disposables\Serial.cs" />
+    <Compile Include="Stress\Core\Schedulers\EventLoop.cs" />
     <Compile Include="Stress\Core\Disposables\SingleAssignment.cs" />
     <Compile Include="Stress\Core\Disposables\RefCount.cs" />
     <Compile Include="Stress\Linq\Delay.cs" />
