--- a/Ix.NET/Source/Common.targets
+++ b/Ix.NET/Source/Common.targets
@@ -23,13 +23,31 @@
     <BuildTarget>PL</BuildTarget>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug45|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugPLLITE|AnyCPU' ">
     <BuildConfig>Debug</BuildConfig>
-    <BuildTarget>45</BuildTarget>
+    <BuildTarget>PLLITE</BuildTarget>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release45|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleasePLLITE|AnyCPU' ">
     <BuildConfig>Release</BuildConfig>
-    <BuildTarget>45</BuildTarget>
+    <BuildTarget>PLLITE</BuildTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug8|AnyCPU' ">
+    <BuildConfig>Debug</BuildConfig>
+    <BuildTarget>8</BuildTarget>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release8|AnyCPU' ">
+    <BuildConfig>Release</BuildConfig>
+    <BuildTarget>8</BuildTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug81|AnyCPU' ">
+    <BuildConfig>Debug</BuildConfig>
+    <BuildTarget>81</BuildTarget>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release81|AnyCPU' ">
+    <BuildConfig>Release</BuildConfig>
+    <BuildTarget>81</BuildTarget>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug40|AnyCPU' ">
@@ -40,6 +58,24 @@
     <BuildConfig>Release</BuildConfig>
     <BuildTarget>40</BuildTarget>
   </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug45|AnyCPU' ">
+    <BuildConfig>Debug</BuildConfig>
+    <BuildTarget>45</BuildTarget>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release45|AnyCPU' ">
+    <BuildConfig>Release</BuildConfig>
+    <BuildTarget>45</BuildTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugWP8|AnyCPU' ">
+    <BuildConfig>Debug</BuildConfig>
+    <BuildTarget>WP8</BuildTarget>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseWP8|AnyCPU' ">
+    <BuildConfig>Release</BuildConfig>
+    <BuildTarget>WP8</BuildTarget>
+  </PropertyGroup>  
 
   <!--
        ***********************
@@ -83,9 +119,46 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
     <NoStdLib>true</NoStdLib>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(BuildTarget)' == 'PLITE' ">
+    <DefineConstants>$(DefineConstants);HAS_AWAIT</DefineConstants>
+    <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
+    <NoStdLib>true</NoStdLib>
     <BuildFlavor>DESKTOPCLR45</BuildFlavor>
   </PropertyGroup>
   
+  <PropertyGroup Condition=" '$(BuildTarget)' == 'WP7' ">
+    <DefineConstants>$(DefineConstants);WINDOWSPHONE7;NO_TLS;NO_VARIANCE;NO_SERIALIZABLE;NO_TPL;NO_HASHSET;NO_REMOTING;NO_SEMAPHORE;NO_LARGEARITY;NO_ZIP</DefineConstants>
+    <TargetFrameworkProfile>WindowsPhone71</TargetFrameworkProfile>
+    <TargetFrameworkIdentifier>Silverlight</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
+    <SilverlightApplication>false</SilverlightApplication>
+    <BuildPlatform>SILVERLIGHT</BuildPlatform>
+    <BuildFlavor>SILVERLIGHTM7</BuildFlavor>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(BuildTarget)' == 'WP8' ">
+    <DefineConstants>$(DefineConstants);HAS_EDI;HAS_PROGRESS;PREFER_ASYNC;HAS_AWAIT;NO_EVENTARGS_CONSTRAINT;USE_SL_DISPATCHER;HAS_WINRT;NO_SERIALIZABLE;NO_REMOTING;NO_CDS_COLLECTIONS;USE_TIMER_SELF_ROOT</DefineConstants>
+    <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
+    <SilverlightApplication>false</SilverlightApplication>
+    <BuildPlatform>WINDOWS_PHONE</BuildPlatform>
+    <BuildFlavor>WINDOWS_PHONE8</BuildFlavor>
+    <NoStdLib>true</NoStdLib>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(BuildTarget)' == '40' ">
+    <DefineConstants>$(DefineConstants);HAS_APTCA</DefineConstants>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <BuildPlatform>DESKTOPCLR</BuildPlatform>
+    <BuildFlavor>DESKTOPCLR40</BuildFlavor>
+  </PropertyGroup>
+
   <PropertyGroup Condition=" '$(BuildTarget)' == '45' ">
     <DefineConstants>$(DefineConstants);HAS_AWAIT;HAS_APTCA</DefineConstants>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -101,14 +174,6 @@
     <BuildPlatform>DESKTOPCLR</BuildPlatform>
     <BuildFlavor>DESKTOPCLR45</BuildFlavor>
   </PropertyGroup>  
-
-
-  <PropertyGroup Condition=" '$(BuildTarget)' == '40' ">
-    <DefineConstants>$(DefineConstants);HAS_APTCA</DefineConstants>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <BuildPlatform>DESKTOPCLR</BuildPlatform>
-    <BuildFlavor>DESKTOPCLR40</BuildFlavor>
-  </PropertyGroup>
 
   <PropertyGroup Condition=" '$(BuildTarget)' == '35' ">
     <DefineConstants>$(DefineConstants);NO_VARIANCE;NO_TPL;NO_LARGEARITY;NO_RXINTERFACES;NO_ZIP;HAS_APTCA</DefineConstants>
@@ -126,20 +191,6 @@
     <BuildPlatform>SILVERLIGHT</BuildPlatform>
     <BuildFlavor>SILVERLIGHT5</BuildFlavor>
   </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(BuildTarget)' == 'WP7' ">
-    <DefineConstants>$(DefineConstants);WINDOWSPHONE7;NO_TLS;NO_VARIANCE;NO_SERIALIZABLE;NO_TPL;NO_HASHSET;NO_REMOTING;NO_SEMAPHORE;NO_LARGEARITY;NO_ZIP</DefineConstants>
-    <TargetFrameworkProfile>WindowsPhone71</TargetFrameworkProfile>
-    <TargetFrameworkIdentifier>Silverlight</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
-    <SilverlightApplication>false</SilverlightApplication>
-    <BuildPlatform>SILVERLIGHT</BuildPlatform>
-    <BuildFlavor>SILVERLIGHTM7</BuildFlavor>
-  </PropertyGroup>
-
-
-
 
   <!--
        ********************
